--- a/translations/messages.fr.yaml
+++ b/translations/messages.fr.yaml
@@ -1,4 +1,10 @@
 admin.posts.title: Articles
 admin.users.title: Utilisateurs
+
+
 help.browse_app: salut fiston
+
+
 title.homepage: Bienvenu chez moi
+
+title.post: Les articles
